fix: upgrade to node v24 and move to esm (2.2.2) (#351)
* fix: metadata update

* fix server version schema

* undici

* upgrade to node v24

* esm

* remove husky, update lint config

* tests run

* json5

* remove old deps

* lint errors

* missing env

* chore(release): 2.2.2 [skip ci]
